@@ -1,4 +1,6 @@
 current:
+  * add video size request to (Py)GTK widget (req #3034522)
+    - thanks to Jerome Charaoui for the patch!
   * add support for GS1 DataBar Expanded (RSS Expanded) symbology
   * fix for poor iPhone 4 performance
   * add language bindings for DataBar
